Remove deprecated authorization parameter
