# src/digitalIdentity-backend/src/main/java/didentity/amos/digitalIdentity/controller/ConnectionController.java
@@ -12,7 +12,6 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.ResponseBody;
 
-import didentity.amos.digitalIdentity.services.AuthenticationService;
 import didentity.amos.digitalIdentity.services.DIConnectionService;
 import didentity.amos.digitalIdentity.model.connection.Connection;
 import didentity.amos.digitalIdentity.model.User;
@@ -23,26 +22,15 @@ import didentity.amos.digitalIdentity.security.HRAuthorization;
 public class ConnectionController {
 
     @Autowired
-    private AuthenticationService authenticationService;
-
-    @Autowired
     private DIConnectionService diConnectionService;
 
     @GetMapping(path = "/all", produces = MediaType.APPLICATION_JSON_VALUE)
-    public @ResponseBody ResponseEntity<List<Connection>> getAll(@RequestParam(required = false) String authorization) {
-        if (authenticationService.authentication(authorization) == false) {
-            return ResponseEntity.status(401).body(null);
-        }
+    public @ResponseBody ResponseEntity<List<Connection>> getAll() {
         return ResponseEntity.status(200).body(diConnectionService.getAllConnections());
     }
 
     @GetMapping(path = "/{id}", produces = MediaType.APPLICATION_JSON_VALUE)
-    public @ResponseBody ResponseEntity<User> getConnection(@RequestParam Integer id,
-            @RequestParam(required = false) String authorization) {
-
-        if (authenticationService.authentication(authorization) == false) {
-            return ResponseEntity.status(401).body(null);
-        }
+    public @ResponseBody ResponseEntity<User> getConnection(@RequestParam Integer id) {
 
         User user = diConnectionService.getConnectionById(id);
         if (user == null) {
@@ -57,12 +45,8 @@ public class ConnectionController {
             @RequestParam String name,
             @RequestParam String surname,
             @RequestParam String email,
-            @RequestParam(required = false) String user_role,
-            @RequestParam(required = false) String authorization) {
+            @RequestParam(required = false) String user_role) {
 
-        if (authenticationService.authentication(authorization) == false) {
-            return authenticationService.getError();
-        }
         return diConnectionService.create(name, surname, email, user_role);
     }
 
@@ -72,24 +56,14 @@ public class ConnectionController {
             @RequestParam String name,
             @RequestParam String surname,
             @RequestParam String email,
-            @RequestParam(required = false) String user_role,
-            @RequestParam(required = false) String authorization) {
-
-        if (authenticationService.authentication(authorization) == false) {
-            return authenticationService.getError();
-        }
+            @RequestParam(required = false) String user_role) {
 
         return diConnectionService.update(id, name, surname, email, user_role);
     }
 
     @PostMapping(path = "/remove")
     public @ResponseBody ResponseEntity<String> remove(
-            @RequestParam String connectionId,
-            @RequestParam(required = false) String authorization) {
-
-        if (authenticationService.authentication(authorization) == false) {
-            return authenticationService.getError();
-        }
+            @RequestParam String connectionId) {
 
         return diConnectionService.remove(connectionId);
     }
