# src/digitalIdentity-frontend/src/app/pages/credential/create-credDef/create-cred-def.component.ts
@@ -254,7 +254,6 @@ export class CreateCredDefComponent
 
   credDefToHttpParams(credDef: CredDef): HttpParams {
     let params: HttpParams = new HttpParams();
-    params = params.append('authorization', 'passing');
     params = params.append('alias', credDef.name);
     params = params.append('comment', credDef.comment);
     params = params.append('imageUri', credDef.imageUri);
@@ -267,7 +266,7 @@ export class CreateCredDefComponent
   }
 
   getSchema() {
-    const params = new HttpParams().append('authorization', 'passing');
+    const params = new HttpParams();
     this.httpService
       .getRequest('Get all schemas', '/schema/all', params)
       .then((response) => {
