# src/digitalIdentity-frontend/src/app/pages/schema/schema-overview-page/schema-overview-page.component.ts
@@ -70,7 +70,7 @@ export class SchemaOverviewComponent implements OnInit {
   }
 
   initTable() {
-    const params = new HttpParams().append('authorization', 'passing');
+    const params = new HttpParams();
     this.httpService
       .getRequest('Get all schemas', '/schema/all', params)
       .then((response) => {
